# obielf

./: Cargo.toml  LICENSE  README.md  README2.md  TODO.md
docs/: obielf_formal_spec.md  spec_review.md
examples/fruit-ninja/: .gitignore
examples/fruit-ninja/docs/: resource_pack_format.md
examples/fruit-ninja/scripts/: build.sh
examples/fruit-ninja/src/: main.c
examples/fruit-ninja/tools/: obielf_pack.c
fruit-ninja-with-obielf/: CMakeLists.txt  PROJECT_SCOPE.md  README.md
fruit-ninja-with-obielf/assets/: manifest.txt
fruit-ninja-with-obielf/include/fruit/: config.h  game.h  resources.h
fruit-ninja-with-obielf/include/obielf/: resource_pack.h
fruit-ninja-with-obielf/scripts/: build.ps1  run.ps1
fruit-ninja-with-obielf/src/: game.c  obielf_resource.c  resources.c
fruit-ninja-with-obielf/tests/: game_logic_test.c  resource_pack_test.c
src/: assembly.rs  error.rs  lib.rs  part.rs  policy.rs  ring.rs  stream.rs  target.rs  telemetry.rs  token.rs
tests/: conformance.rs
